# nomad-hzb-emil

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/nomad_hzb_emil/: _version.py
src/nomad_hzb_emil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nomad_hzb_emil/apps/: __init__.py  emil_eln_app.py  scala_eln_app.py
src/nomad_hzb_emil/parsers/: __init__.py  emil_general_parser.py
src/nomad_hzb_emil/schema_packages/: __init__.py  emil_lab_package.py
tests/data/: test.archive.yaml
tests/parsers/: test_parser.py
